--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,3 +43,19 @@ body {
     transform: rotate(1turn);
   }
 }
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
+
+.preserve-3d {
+  transform-style: preserve-3d;
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
+}
+
+.perspective-\[1000px\] {
+  perspective: 1000px;
+}
