mainModal의 스타일 설정, animation 작업중, pc환경 이외에는 출력되지 않게 설정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,13 @@
 body {
   background: var(--background);
   font-family: Pretendard;
+  -ms-overflow-style: none;
+  overflow-y: scroll;
+}
+
+/* 스크롤바 감추기 용 */
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .loader {
